--- a/styles/index.css
+++ b/styles/index.css
@@ -17,10 +17,21 @@ body {
 .square {
   width: 80px;
   height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .piece {
   width: 100%;
 }
 .piece:hover {
   cursor: grab;
+}
+.highlight {
+  display: block;
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  background: rgba(0, 0, 0, 0.12);
+  z-index: 100;
 }
