--- a/styles/index.css
+++ b/styles/index.css
@@ -14,12 +14,16 @@ body {
 .black {
   background: #769656;
 }
+
 .square {
   width: 80px;
   height: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.highlightYellow {
+  background: #f7f769;
 }
 .piece {
   width: 100%;
